# dist/swagger.json
@@ -97,7 +97,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"LivroResquestDto": {
+			"LivroRequestDto": {
 				"properties": {
 					"titulo": {
 						"type": "string"
@@ -743,7 +743,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/LivroResquestDto"
+								"$ref": "#/components/schemas/LivroRequestDto"
 							}
 						}
 					}
@@ -836,7 +836,7 @@
 				}
 			},
 			"get": {
-				"operationId": "FiltrarLivroPorTitulo",
+				"operationId": "ListarTodosLivros",
 				"responses": {
 					"200": {
 						"description": "",
@@ -851,7 +851,87 @@
 					"204": {
 						"description": "No content"
 					},
-					"400": {
+					"404": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Livro"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/livro/id": {
+			"get": {
+				"operationId": "FiltrarLivroById",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					},
+					"204": {
+						"description": "No content"
+					},
+					"404": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Livro"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/livro/titulo": {
+			"get": {
+				"operationId": "FiltrarLivroByTitulo",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					},
+					"204": {
+						"description": "No content"
+					},
+					"404": {
 						"description": "",
 						"content": {
 							"application/json": {
@@ -876,86 +956,6 @@
 						}
 					}
 				]
-			}
-		},
-		"/livro/id/{id}": {
-			"get": {
-				"operationId": "FiltrarLivroPorId",
-				"responses": {
-					"200": {
-						"description": "",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/BasicResponseDto"
-								}
-							}
-						}
-					},
-					"204": {
-						"description": "No content"
-					},
-					"400": {
-						"description": "",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/BasicResponseDto"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Livro"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					}
-				]
-			}
-		},
-		"/livro/all": {
-			"get": {
-				"operationId": "ListarTodosLivros",
-				"responses": {
-					"200": {
-						"description": "",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/BasicResponseDto"
-								}
-							}
-						}
-					},
-					"204": {
-						"description": "No content"
-					},
-					"400": {
-						"description": "",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/BasicResponseDto"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Livro"
-				],
-				"security": [],
-				"parameters": []
 			}
 		},
 		"/emprestimo": {
