# src/controller/LivroController.ts
@@ -1,10 +1,9 @@
 import { LivroService } from "../service/LivroService";
-import { LivroResquestDto } from "../model/dto/LivroRequestDto";
+import { LivroRequestDto } from "../model/dto/LivroRequestDto";
 import { BasicResponseDto } from "../model/dto/BasicResponseDto";
 import { LivroDto } from "../model/dto/LivroDto";
 import { LivroEntity } from "../model/entity/LivroEntity";
 import { Body, Controller, Delete, Get, Path, Post, Put, Query, Res, Route, Tags, TsoaResponse } from "tsoa";
-
 
 @Route("livro")
 @Tags("Livro")
@@ -13,13 +12,13 @@ export class LivroController extends Controller {
 
     @Post()
     async cadastrarLivro(
-        @Body() dto: LivroResquestDto,
+        @Body() dto: LivroRequestDto,
         @Res() fail: TsoaResponse<400, BasicResponseDto>,
         @Res() success: TsoaResponse<201, BasicResponseDto>
     ): Promise<void> {
         try {
             const livro = await this.livroService.cadastrarLivro(dto);
-            return success(201, new BasicResponseDto("livro criado com sucesso!", livro));
+            return success(201, new BasicResponseDto("Livro criado com sucesso!", livro));
         } catch (error: any) {
             return fail(400, new BasicResponseDto(error.message, undefined));
         }
@@ -53,45 +52,52 @@ export class LivroController extends Controller {
         }
     }
 
-    @Get("id/{id}")
-    async filtrarLivroPorId(
-        @Path() id: number,
-        @Res() notFound: TsoaResponse<400, BasicResponseDto>,
+    @Get("/id")
+    async filtrarLivroById(
+        @Query() id: number,
+        @Res() notFound: TsoaResponse<404, BasicResponseDto>,
         @Res() success: TsoaResponse<200, BasicResponseDto>
     ): Promise<void> {
         try {
             const livro = await this.livroService.filtrarLivroById(id);
-            return success(200, new BasicResponseDto("Livro encontrado!", livro));
+            if (livro) {
+                return success(200, new BasicResponseDto("Livro encontrado com sucesso!", livro));
+            } else {
+                return notFound(404, new BasicResponseDto("Livro não encontrado!", undefined));
+            }
         } catch (error: any) {
-            return notFound(400, new BasicResponseDto(error.message, undefined));
+            return notFound(404, new BasicResponseDto(error.message, undefined));
+        }
+    }
+
+    @Get("/titulo")
+    async filtrarLivroByTitulo(
+        @Query() titulo: string,
+        @Res() notFound: TsoaResponse<404, BasicResponseDto>,
+        @Res() success: TsoaResponse<200, BasicResponseDto>
+    ): Promise<void> {
+        try {
+            const livros = await this.livroService.filtrarLivroByTitulo(titulo);
+            if (livros.length > 0) {
+                return success(200, new BasicResponseDto("Livros encontrados com sucesso!", livros));
+            } else {
+                return notFound(404, new BasicResponseDto("Nenhum livro encontrado com o título fornecido!", undefined));
+            }
+        } catch (error: any) {
+            return notFound(404, new BasicResponseDto(error.message, undefined));
         }
     }
 
     @Get()
-    async filtrarLivroPorTitulo(
-        @Query() titulo: string,
-        @Res() notFound: TsoaResponse<400, BasicResponseDto>,
-        @Res() success: TsoaResponse<200, BasicResponseDto>
-    ): Promise<void> {
-        try {
-            const livro: LivroEntity[] = await this.livroService.filtrarLivroByTitulo(titulo);
-            return success(200, new BasicResponseDto("Titulo encontrado!", titulo));
-        } catch (error: any) {
-            return notFound(400, new BasicResponseDto(error.message, undefined));
-        }
-    }
-
-    @Get("all")
     async listarTodosLivros(
-        @Res() notFound: TsoaResponse<400, BasicResponseDto>,
+        @Res() notFound: TsoaResponse<404, BasicResponseDto>,
         @Res() success: TsoaResponse<200, BasicResponseDto>
     ): Promise<void> {
         try {
-            const livro: LivroEntity[] = await this.livroService.listarTodosLivros();
-            return success(200, new BasicResponseDto("Livros listados com sucesso!", livro));
+            const livros = await this.livroService.listarTodosLivros();
+            return success(200, new BasicResponseDto("Lista de todos os livros listada com sucesso!", livros));
         } catch (error: any) {
-            return notFound(400, new BasicResponseDto(error.message, undefined));
+            return notFound (404, new BasicResponseDto(error.message, undefined));
         }
     }
-    
 }
